--- a/.env.codeship
+++ b/.env.codeship
@@ -4,12 +4,10 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost/snow/public/
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_tests
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=dbsnow_test
-DB_USERNAME=root
-DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
